--- a/2023_final/vehicle_detection/data.yaml
+++ b/2023_final/vehicle_detection/data.yaml
@@ -3,4 +3,4 @@ val: C:\Users\b0981\Documents\碩班\碩一\Self-Driving Cars\SDC_HW\2023_final\
 test: C:\Users\b0981\Documents\碩班\碩一\Self-Driving Cars\SDC_HW\2023_final\data\whole_yolo_testing\images
 
 nc: 1
-names: ["vehicle"]
+names: ["car"]
